--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,10 +3,10 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer
-  class="opacity-80 m-4 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex justify-center"
+  class="opacity-80 m-4 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10"
 >
   <div
-    class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
+    class="rounded-lg border-t-1 border-b-2 border-white/30 shadow shadow-white/20 w-full max-w-screen-xl mx-auto flex items-center justify-between md:flex md:items-center md:justify-between p-4 py-4"
   >
     <span class="text-sm sm:text-center text-yellow-200"
       >© {currentYear}
@@ -26,5 +26,16 @@ const currentYear = new Date().getFullYear();
         >
       </li>
     </ul>
+  </div>
+  <div class="flex justify-center mt-8">
+    <small
+      >Inspirado en <a
+        href="https://porfolio.dev/"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="underline text-primary-700 font-bold text-yellow-200"
+        >portfolio.dev</a
+      > de <span class="font-bold"> midudev </span>
+    </small>
   </div>
 </footer>
