--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -91,41 +91,49 @@ const projects = [
 ];
 ---
 
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
+<div class="grid grid-cols-1 md:grid-cols-4 lg:grid-cols-4 gap-6">
   {
-    projects.map(({ title, description, tags, image, link, github }) => (
-      <article class="bg-[#43229C]/50 rounded shadow-white/10 shadow-xl">
-        <a href={link} target="_blank" rel="noopener noreferrer">
-          <img
-            class="rounded shadow-2xl shadow-white/10 mb-2"
-            src={image}
-            alt={`Captura de pantalla del proyecto ${title}`}
-          />
-          <div class="p-3">
-            <h3 class="text-lg font-semibold text-yellow-200 mb-2">{title}</h3>
-            <p class="text-m mb-4 text-pretty">{description}</p>
-            <a
-              class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded"
-              href={github}
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              GitHub
-            </a>
-            <ul class="flex gap-x-3 flex-row flex-wrap mt-4">
-              {tags.map((tag) => (
-                <li>
-                  <span
-                    class={`flex gap-x-1 rounded-full text-xs ${tag.class} py-2 px-3 m-1`}
-                  >
-                    <tag.icon class="size-4" />
-                    {tag.name}
-                  </span>
-                </li>
-              ))}
-            </ul>
-          </div>
-        </a>
+    projects.map(({ title, description, tags, image, link, github }, index) => (
+      <article
+        class={`bg-[#43229C]/50 rounded shadow-white/10 shadow-xl col-span-2 ${index === 2 && "md:grid lg:grid md:grid-cols-2 lg:grid-cols-2 md:col-span-4 lg:col-span-4"}`}
+      >
+        <div
+          class={`${index === 2 && "md:grid lg:grid md:grid-cols-2 lg:grid-cols-2 md:col-span-2 lg:col-span-4"}`}
+        >
+          <a href={link} target="_blank" rel="noopener noreferrer">
+            <img
+              class={`rounded shadow-2xl shadow-white/10 mb-2 ${index === 2 && "h-full object-cover"}`}
+              src={image}
+              alt={`Captura de pantalla del proyecto ${title}`}
+            />
+            <div class="p-3">
+              <h3 class="text-lg font-semibold text-yellow-200 mb-2">
+                {title}
+              </h3>
+              <p class="text-m mb-4 text-pretty">{description}</p>
+              <a
+                class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded"
+                href={github}
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                GitHub
+              </a>
+              <ul class="flex gap-x-3 flex-row flex-wrap mt-4 -ml-1">
+                {tags.map((tag) => (
+                  <li>
+                    <span
+                      class={`flex gap-x-1 rounded-full text-xs ${tag.class} py-2 px-3 m-1`}
+                    >
+                      <tag.icon class="size-4" />
+                      {tag.name}
+                    </span>
+                  </li>
+                ))}
+              </ul>
+            </div>
+          </a>
+        </div>
       </article>
     ))
   }
