--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -27,122 +27,98 @@ import Angular from "./logos/AngularLogo.astro";
 const tags = {
   HTML: {
     name: "HTML",
-    class: "bg-[#E54C21] text-white font-semibold",
     icon: HTML,
   },
   JavaScript: {
     name: "JavaScript",
-    class: "bg-[#EFD81D] text-black font-semibold",
     icon: JavaScript,
   },
   CSS: {
     name: "CSS",
-    class: "bg-[#264DE4] text-white font-semibold",
     icon: CSS,
   },
   Bootstrap: {
     name: "Bootstrap",
-    class: "bg-[#7B11F3] text-white font-semibold",
     icon: Bootstrap,
   },
   React: {
     name: "React",
-    class: "bg-[#0C9FCB] text-white font-semibold",
     icon: React,
   },
   MongoDB: {
     name: "MongoDB",
-    class: "bg-[#006849] text-white font-semibold",
     icon: MongoDB,
   },
   NodeJS: {
     name: "NodeJS",
-    class: "bg-[#68A063] text-white font-semibold",
     icon: NodeJS,
   },
   TailwindCSS: {
     name: "TailwindCSS",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: TailwindCSS,
   },
   AstroLogo: {
     name: "Astro",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: AstroLogo,
   },
   ExpressJS: {
     name: "ExpressJS",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: ExpressJS,
   },
   Python: {
     name: "Python",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: Python,
   },
   TypeScript: {
     name: "TypeScript",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: TypeScript,
   },
   Docker: {
     name: "Docker",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: Docker,
   },
   PHP: {
     name: "PHP",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: PHP,
   },
   Laravel: {
     name: "Laravel",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: Laravel,
   },
   MySQL: {
     name: "MySQL",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: MySQL,
   },
   NextJS: {
     name: "NextJS",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: NextJS,
   },
   SASS: {
     name: "SASS",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: SASS,
   },
   Git: {
     name: "Git",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: Git,
   },
   GitHub: {
     name: "GitHub",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: GitHub,
   },
   npm: {
     name: "npm",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: Npm,
   },
   VSCode: {
     name: "VSCode",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: VSCode,
   },
   Vue: {
     name: "Vue",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: Vue,
   },
   Angular: {
     name: "Angular",
-    class: "bg-[#38BDF8] text-white font-semibold",
     icon: Angular,
   },
 };
@@ -150,6 +126,7 @@ const tags = {
 const stacks = [
   {
     title: "Frontend",
+    color: "from-yellow-500 to-white",
     tags: [
       tags.HTML,
       tags.CSS,
@@ -162,10 +139,12 @@ const stacks = [
   },
   {
     title: "Backend",
+    color: "from-red-500 to-white",
     tags: [tags.JavaScript, tags.NodeJS, tags.ExpressJS, tags.MongoDB],
   },
   {
     title: "Interesado",
+    color: "from-blue-500 to-white",
     tags: [
       tags.Vue,
       tags.Angular,
@@ -179,6 +158,7 @@ const stacks = [
   },
   {
     title: "Herramientas",
+    color: "from-green-500 to-white",
     tags: [tags.Git, tags.GitHub, tags.npm, tags.VSCode],
   },
 ];
@@ -186,16 +166,18 @@ const stacks = [
 
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
   {
-    stacks.map(({ title, tags }) => (
+    stacks.map(({ title, color, tags }) => (
       <article class="relative bg-[#43229C]/20 p-6 rounded shadow-white/10 shadow-xl">
-        <h3 class="text-center mb-8 text-3xl font-semibold text-yellow-200 mb-2">
+        <h3
+          class={`text-center mb-8 text-3xl font-semibold bg-gradient-to-r ${color} text-transparent bg-clip-text mb-2`}
+        >
           {title}
         </h3>
         <ul class="grid grid-cols-3 gap-4">
           {tags.map((tag) => (
             <li class="rounded-2xl group flex flex-col justify-center items-center">
               <tag.icon class="size-12 mb-2" />
-              <span class="text-sm"> {tag.name}</span>
+              <span class="text-sm font-semibold"> {tag.name}</span>
             </li>
           ))}
         </ul>
