Added kind of logo to header and modify sizes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,7 @@
 ---
+import LinkedInIcon from "../components/icons/LinkedIn.astro";
+import GitHubIcon from "../components/icons/GitHub.astro";
+
 const navItems = [
   {
     title: "Proyectos",
@@ -24,21 +27,46 @@ const navItems = [
 ---
 
 <header
-  class="fixed top-0 z-10 bg-[#43229C] flex items-center justify-center w-full mx-auto p-2"
+  class="fixed top-0 z-10 bg-[#43229C] flex items-center justify-center w-full mx-auto p-1 md:p-2"
 >
   <nav
-    class="flex px-3 text-lg font-medium rounded-full text-white-600 justify-center items-center"
+    class="flex-grow flex px-3 text-xs md:text-lg font-medium rounded-full text-white justify-center items-center"
   >
-    {
-      navItems.map((link) => (
-        <a
-          class="relative block px-3 py-2 transition hover:text-[#FFD700]"
-          aria-label={link.label}
-          href={link.url}
-        >
-          {link.title}
-        </a>
-      ))
-    }
+    <h3
+      class="bg-gradient-to-r from-yellow-500 to-white text-transparent bg-clip-text font-black lg:text-3xl md:text-xl"
+    >
+      &lt;RGP /&gt;
+    </h3>
+    <div class="flex items-center justify-center flex-grow">
+      {
+        navItems.map((link) => (
+          <a
+            class="relative block pr-2 md:px-3 py-2 transition hover:text-[#FFD700]"
+            aria-label={link.label}
+            href={link.url}
+          >
+            {link.title}
+          </a>
+        ))
+      }
+    </div>
+    <div class="ml-auto flex items-center">
+      <a
+        href="https://www.linkedin.com/in/raul-garrigos/"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="mr-5 md:mr-3"
+      >
+        <LinkedInIcon class="size-3 md:size-5" />
+      </a>
+      <a
+        href="https://github.com/raulgarrigos"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="md:mx-3"
+      >
+        <GitHubIcon class="size-3 md:size-5" />
+      </a>
+    </div>
   </nav>
 </header>
