--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,6 +1,7 @@
 ---
 const personalImageAlt = "Raül Garrigós";
 import SocialPill from "../components/SocialPill.astro";
+import CVIcon from "../components/icons/CV.astro";
 ---
 
 <article class="w-full flex flex-col items-center justify-center gap-8">
@@ -54,6 +55,7 @@ import SocialPill from "../components/SocialPill.astro";
     <SocialPill
       href="https://drive.google.com/file/d/1bq5-sfvB16nWxvCiRTO2jtfuMvYpI7Cj/view"
     >
+      <CVIcon class="size-4 md:size-6" />
       Currículum
     </SocialPill>
   </div>
