--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@ const navItems = [
     >
       &lt;RGP /&gt;
     </h3>
-    <div class="flex items-center justify-center flex-grow">
+    <div class="flex items-center justify-center flex-grow md:-ml-10">
       {
         navItems.map((link) => (
           <a
