--- a/src/components/logos/AngularLogo.astro
+++ b/src/components/logos/AngularLogo.astro
@@ -1,35 +1,35 @@
 <svg
   {...Astro.props}
-  xmlns="http://www.w3.org/2000/svg"
-  viewBox="0 0 242 256"
-  fill="none"
+  xmlns='http://www.w3.org/2000/svg'
+  viewBox='0 0 242 256'
+  fill='none'
 >
   <defs>
-    <linearGradient id="gradient1" x1="0%" y1="0%" x2="100%" y2="100%">
-      <stop offset="0%" stop-color="#E40035"></stop>
-      <stop offset="20%" stop-color="#F60A48"></stop>
-      <stop offset="40%" stop-color="#F20755"></stop>
-      <stop offset="50%" stop-color="#DC087D"></stop>
-      <stop offset="70%" stop-color="#9717E7"></stop>
-      <stop offset="100%" stop-color="#6C00F5"></stop>
+    <linearGradient id='gradient1' x1='0%' y1='0%' x2='100%' y2='100%'>
+      <stop offset='0%' stop-color='#E40035'></stop>
+      <stop offset='20%' stop-color='#F60A48'></stop>
+      <stop offset='40%' stop-color='#F20755'></stop>
+      <stop offset='50%' stop-color='#DC087D'></stop>
+      <stop offset='70%' stop-color='#9717E7'></stop>
+      <stop offset='100%' stop-color='#6C00F5'></stop>
     </linearGradient>
-    <linearGradient id="gradient2" x1="0%" y1="0%" x2="100%" y2="100%">
-      <stop offset="0%" stop-color="#FF31D9"></stop>
-      <stop offset="100%" stop-color="#FF5BE1" stop-opacity="0"></stop>
+    <linearGradient id='gradient2' x1='0%' y1='0%' x2='100%' y2='100%'>
+      <stop offset='0%' stop-color='#FF31D9'></stop>
+      <stop offset='100%' stop-color='#FF5BE1' stop-opacity='0'></stop>
     </linearGradient>
-    <clipPath id="clip-path">
-      <path fill="#fff" d="M0 0h242v256H0V0Z"></path>
+    <clipPath id='clip-path'>
+      <path fill='#fff' d='M0 0h242v256H0V0Z'></path>
     </clipPath>
   </defs>
-  <g clip-path="url(#clip-path)">
-    <g mask="url(#clip-path)">
+  <g clip-path='url(#clip-path)'>
+    <g mask='url(#clip-path)'>
       <path
-        fill="url(#gradient1)"
-        d="m241 43-9 136L149 0l92 43Zm-58 176-62 36-63-36 12-31h101l12 31ZM121 68l32 80H88l33-80ZM9 179 0 43 92 0 9 179Z"
+        fill='url(#gradient1)'
+        d='m241 43-9 136L149 0l92 43Zm-58 176-62 36-63-36 12-31h101l12 31ZM121 68l32 80H88l33-80ZM9 179 0 43 92 0 9 179Z'
       ></path>
       <path
-        fill="url(#gradient2)"
-        d="m241 43-9 136L149 0l92 43Zm-58 176-62 36-63-36 12-31h101l12 31ZM121 68l32 80H88l33-80ZM9 179 0 43 92 0 9 179Z"
+        fill='url(#gradient2)'
+        d='m241 43-9 136L149 0l92 43Zm-58 176-62 36-63-36 12-31h101l12 31ZM121 68l32 80H88l33-80ZM9 179 0 43 92 0 9 179Z'
       ></path>
     </g>
   </g>
