--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,36 +1,36 @@
 ---
-import LinkInLine from "./LinkInLine.astro";
+import LinkInLine from './LinkInLine.astro'
 
 interface Props {
-  title: string;
-  description: string;
-  company: string;
-  link?: string;
-  date: string;
-  isLatest: boolean;
+  title: string
+  description: string
+  company: string
+  link?: string
+  date: string
+  isLatest: boolean
 }
-const { title, description, link, company, date, isLatest } = Astro.props;
+const { title, description, link, company, date, isLatest } = Astro.props
 ---
 
 <span
-  class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white"
+  class='absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white'
 >
   <svg
-    class="w-2.5 h-2.5 text-purple-800"
-    aria-hidden="true"
-    xmlns="http://www.w3.org/2000/svg"
-    fill="currentColor"
-    viewBox="0 0 20 20"
+    class='w-2.5 h-2.5 text-purple-800'
+    aria-hidden='true'
+    xmlns='http://www.w3.org/2000/svg'
+    fill='currentColor'
+    viewBox='0 0 20 20'
   >
     <path
-      d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"
+      d='M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z'
     ></path>
   </svg>
 </span>
-<time class="block mb-2 text-sm font-normal leading-none text-blue-200/80"
+<time class='block mb-2 text-sm font-normal leading-none text-blue-200/80'
   >{date}</time
 >
-<h3 class="flex items-center mb-1 mt-3 text-lg font-semibold text-yellow-200">
+<h3 class='flex items-center mb-1 mt-3 text-lg font-semibold text-yellow-200'>
   {title}
   <!-- {
     isLatest && (
@@ -39,32 +39,32 @@ const { title, description, link, company, date, isLatest } = Astro.props;
       </span>
     )
   } -->
-  <h3 class="text-sm text-red-200/80 mb-2">
+  <h3 class='text-sm text-red-200/80 mb-2'>
     {company}
   </h3>
 </h3>
-<p class="mb-4 text-base font-normal text-gray-200 text-pretty">
+<p class='mb-4 text-base font-normal text-gray-200 text-pretty'>
   {description}
 </p>
 {
   link && (
     <LinkInLine href={link}>
-      Saber más{" "}
+      Saber más{' '}
       <svg
-        xmlns="http://www.w3.org/2000/svg"
-        class="w-5 icon icon-tabler icon-tabler-chevron-right"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        stroke-width="2"
-        stroke="currentColor"
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
+        xmlns='http://www.w3.org/2000/svg'
+        class='w-5 icon icon-tabler icon-tabler-chevron-right'
+        width='24'
+        height='24'
+        viewBox='0 0 24 24'
+        stroke-width='2'
+        stroke='currentColor'
+        fill='none'
+        stroke-linecap='round'
+        stroke-linejoin='round'
       >
         <>
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M9 6l6 6l-6 6" />
+          <path stroke='none' d='M0 0h24v24H0z' fill='none' />
+          <path d='M9 6l6 6l-6 6' />
         </>
       </svg>
     </LinkInLine>
