--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,41 +1,41 @@
 ---
-const currentYear = new Date().getFullYear();
+const currentYear = new Date().getFullYear()
 ---
 
 <footer
-  class="opacity-80 m-4 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10"
+  class='opacity-80 m-4 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10'
 >
   <div
-    class="rounded-lg border-t-1 border-b-2 border-white/30 shadow shadow-white/20 w-full max-w-screen-xl mx-auto flex items-center justify-between md:flex md:items-center md:justify-between p-4 py-4"
+    class='rounded-lg border-t-1 border-b-2 border-white/30 shadow shadow-white/20 w-full max-w-screen-xl mx-auto flex items-center justify-between md:flex md:items-center md:justify-between p-4 py-4'
   >
-    <span class="text-sm sm:text-center text-yellow-200"
+    <span class='text-sm sm:text-center text-yellow-200'
       >© {currentYear}
-      <a href="https://github.com/raulgarrigos" class="hover:underline"
+      <a href='https://github.com/raulgarrigos' class='hover:underline'
         >Raül Garrigós</a
       >
     </span>
-    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium sm:mt-0">
+    <ul class='flex flex-wrap items-center mt-3 text-sm font-medium sm:mt-0'>
       <li>
-        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
+        <a href='/#sobre-mi' class='hover:underline me-4 md:me-6'>Sobre mí</a>
       </li>
       <li>
         <a
-          id="contacto"
-          href="mailto:raul.garrigos91@gmail.com"
-          class="hover:underline">Contacto</a
+          id='contacto'
+          href='mailto:raul.garrigos91@gmail.com'
+          class='hover:underline'>Contacto</a
         >
       </li>
     </ul>
   </div>
-  <div class="flex justify-center mt-8">
+  <div class='flex justify-center mt-8'>
     <small
       >Inspirado en <a
-        href="https://porfolio.dev/"
-        target="_blank"
-        rel="noopener noreferrer"
-        class="underline text-primary-700 font-bold text-yellow-200"
+        href='https://porfolio.dev/'
+        target='_blank'
+        rel='noopener noreferrer'
+        class='underline text-primary-700 font-bold text-yellow-200'
         >portfolio.dev</a
-      > de <span class="font-bold"> midudev </span>
+      > de <span class='font-bold'> midudev </span>
     </small>
   </div>
 </footer>
