--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,56 +1,56 @@
 ---
-const personalImageAlt = "Raül Garrigós";
-import Badge from "../components/Badge.astro";
-import LinkedInIcon from "../components/icons/LinkedIn.astro";
-import GitHubIcon from "../components/icons/GitHub.astro";
-import MailIcon from "../components/icons/Mail.astro";
-import SocialPill from "../components/SocialPill.astro";
+const personalImageAlt = 'Raül Garrigós'
+import Badge from '../components/Badge.astro'
+import LinkedInIcon from '../components/icons/LinkedIn.astro'
+import GitHubIcon from '../components/icons/GitHub.astro'
+import MailIcon from '../components/icons/Mail.astro'
+import SocialPill from '../components/SocialPill.astro'
 ---
 
-<div class="flex gap-4">
-  <div class="max-w-xl">
-    <div class="flex items-center mb-4">
-      <h1 class="text-2xl font-bold tracking-tight mb-2 text-white sm:text-4xl">
+<div class='flex gap-4'>
+  <div class='max-w-xl'>
+    <div class='flex items-center mb-4'>
+      <h1 class='text-2xl font-bold tracking-tight mb-2 text-white sm:text-4xl'>
         Hola, soy Raül
       </h1>
       <a
-        href="https://www.linkedin.com/in/raul-garrigos/"
-        target="_blank"
-        rel="noopener"
-        class="ml-4 flex items-center transition md:justify-center md:hover:scale-105"
+        href='https://www.linkedin.com/in/raul-garrigos/'
+        target='_blank'
+        rel='noopener'
+        class='ml-4 flex items-center transition md:justify-center md:hover:scale-105'
       >
         <Badge>Disponible para trabajar</Badge>
       </a>
     </div>
-    <h2 class="text-xl sm:text-2xl text-yellow-100/80">FullStack Developer</h2>
-    <p class="mt-4 text-lg sm:text-xl text-gray-400">
+    <h2 class='text-xl sm:text-2xl text-yellow-100/80'>FullStack Developer</h2>
+    <p class='mt-4 text-lg sm:text-xl text-gray-400'>
       +7 años de experiencia como Content y Catalog Specialist. Un día decidí
       cambiar de rumbo y me embarqué en el Desarrollo Web. <span
-        class="text-yellow-300/90"
+        class='text-yellow-300/90'
       >
         Especializado en crear aplicaciones web desde cero.
       </span> De Barcelona.
     </p>
 
-    <nav class="flex gap-4 mt-8 flex-wrap">
-      <SocialPill href="https://www.linkedin.com/in/raul-garrigos/">
-        <LinkedInIcon class="size-4 md:size-6" />
+    <nav class='flex gap-4 mt-8 flex-wrap'>
+      <SocialPill href='https://www.linkedin.com/in/raul-garrigos/'>
+        <LinkedInIcon class='size-4 md:size-6' />
         LinkedIn
       </SocialPill>
-      <SocialPill href="https://github.com/raulgarrigos">
-        <GitHubIcon class="size-4 md:size-6" />
+      <SocialPill href='https://github.com/raulgarrigos'>
+        <GitHubIcon class='size-4 md:size-6' />
         GitHub
       </SocialPill>
-      <SocialPill href="mailto:raul.garrigos91@gmail.com">
-        <MailIcon class="size-4 md:size-6" />
+      <SocialPill href='mailto:raul.garrigos91@gmail.com'>
+        <MailIcon class='size-4 md:size-6' />
         Contáctame
       </SocialPill>
     </nav>
   </div>
   <div>
     <img
-      class="rounded-full shadow-lg size-21"
-      src="/raulgarrigos.webp"
+      class='rounded-full shadow-lg size-21'
+      src='/raulgarrigos.webp'
       alt={personalImageAlt}
     />
   </div>
