--- a/src/components/LinkInLine.astro
+++ b/src/components/LinkInLine.astro
@@ -1,11 +1,11 @@
 ---
-const { href } = Astro.props;
+const { href } = Astro.props
 ---
 
 <a
   href={href}
-  role="link"
-  class="inline-flex items-center text-lg font-medium text-yellow-300 hover:text-yellow-700"
+  role='link'
+  class='inline-flex items-center text-lg font-medium text-yellow-300 hover:text-yellow-700'
 >
   <slot />
 </a>
