--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,65 +1,65 @@
 ---
-import HTML from "./icons/HTML.astro";
-import JavaScript from "./icons/JavaScript.astro";
-import CSS from "./icons/CSS.astro";
-import Bootstrap from "./icons/Bootstrap.astro";
-import React from "./icons/React.astro";
-import MongoDB from "./icons/MongoDB.astro";
-import NodeJS from "./icons/NodeJS.astro";
-import TailwindCSS from "./icons/TailwindCSS.astro";
-import Badge from "./Badge.astro";
+import HTML from './icons/HTML.astro'
+import JavaScript from './icons/JavaScript.astro'
+import CSS from './icons/CSS.astro'
+import Bootstrap from './icons/Bootstrap.astro'
+import React from './icons/React.astro'
+import MongoDB from './icons/MongoDB.astro'
+import NodeJS from './icons/NodeJS.astro'
+import TailwindCSS from './icons/TailwindCSS.astro'
+import Badge from './Badge.astro'
 
 const tags = {
   HTML: {
-    name: "HTML",
-    class: "bg-[#E54C21] text-white font-semibold",
-    icon: HTML,
+    name: 'HTML',
+    class: 'bg-[#E54C21] text-white font-semibold',
+    icon: HTML
   },
   JavaScript: {
-    name: "JavaScript",
-    class: "bg-[#EFD81D] text-black font-semibold",
-    icon: JavaScript,
+    name: 'JavaScript',
+    class: 'bg-[#EFD81D] text-black font-semibold',
+    icon: JavaScript
   },
   CSS: {
-    name: "CSS",
-    class: "bg-[#264DE4] text-white font-semibold",
-    icon: CSS,
+    name: 'CSS',
+    class: 'bg-[#264DE4] text-white font-semibold',
+    icon: CSS
   },
   Bootstrap: {
-    name: "Bootstrap",
-    class: "bg-[#7B11F3] text-white font-semibold",
-    icon: Bootstrap,
+    name: 'Bootstrap',
+    class: 'bg-[#7B11F3] text-white font-semibold',
+    icon: Bootstrap
   },
   React: {
-    name: "React",
-    class: "bg-[#0C9FCB] text-white font-semibold",
-    icon: React,
+    name: 'React',
+    class: 'bg-[#0C9FCB] text-white font-semibold',
+    icon: React
   },
   MongoDB: {
-    name: "MongoDB",
-    class: "bg-[#006849] text-white font-semibold",
-    icon: MongoDB,
+    name: 'MongoDB',
+    class: 'bg-[#006849] text-white font-semibold',
+    icon: MongoDB
   },
   NodeJS: {
-    name: "NodeJS",
-    class: "bg-[#68A063] text-white font-semibold",
-    icon: NodeJS,
+    name: 'NodeJS',
+    class: 'bg-[#68A063] text-white font-semibold',
+    icon: NodeJS
   },
   TailwindCSS: {
-    name: "TailwindCSS",
-    class: "bg-[#38BDF8] text-white font-semibold",
-    icon: TailwindCSS,
-  },
-};
+    name: 'TailwindCSS',
+    class: 'bg-[#38BDF8] text-white font-semibold',
+    icon: TailwindCSS
+  }
+}
 
 const projects = [
   {
-    title: "Clapperboard",
+    title: 'Clapperboard',
     description:
-      "Proyecto final para el bootcamp de Ironhack. Página web para los amantes del cine para que puedan escribir reviews, crear listas personalizadas de películas y ver listas de otros usuarios. Conectada con una API.",
-    link: "https://clapperboard-app.netlify.app/",
-    github: "https://github.com/raulgarrigos/clapperboard-client",
-    image: "/projects/clapperboard.webp",
+      'Proyecto final para el bootcamp de Ironhack. Página web para los amantes del cine para que puedan escribir reviews, crear listas personalizadas de películas y ver listas de otros usuarios. Conectada con una API.',
+    link: 'https://clapperboard-app.netlify.app/',
+    github: 'https://github.com/raulgarrigos/clapperboard-client',
+    image: '/projects/clapperboard.webp',
     tags: [
       tags.HTML,
       tags.CSS,
@@ -67,65 +67,65 @@ const projects = [
       tags.NodeJS,
       tags.React,
       tags.MongoDB,
-      tags.Bootstrap,
-    ],
+      tags.Bootstrap
+    ]
   },
   {
-    title: "Marketplayr",
+    title: 'Marketplayr',
     description:
-      "Segundo proyecto para el bootcamp de Ironhack. Creada la página para un marketplace sobre videojuegos para que los usuarios puedan comprar y vender videojuegos y así estimular el mercado de videojuegos físico.",
-    link: "https://marketplayr.adaptable.app/",
-    github: "https://github.com/raulgarrigos/marketplayr",
-    image: "/projects/marketplayr.webp",
-    tags: [tags.HTML, tags.CSS, tags.JavaScript, tags.NodeJS, tags.MongoDB],
+      'Segundo proyecto para el bootcamp de Ironhack. Creada la página para un marketplace sobre videojuegos para que los usuarios puedan comprar y vender videojuegos y así estimular el mercado de videojuegos físico.',
+    link: 'https://marketplayr.adaptable.app/',
+    github: 'https://github.com/raulgarrigos/marketplayr',
+    image: '/projects/marketplayr.webp',
+    tags: [tags.HTML, tags.CSS, tags.JavaScript, tags.NodeJS, tags.MongoDB]
   },
   {
-    title: "The Cat Thief",
+    title: 'The Cat Thief',
     description:
       "Primer proyecto para el bootcamp de Ironhack. Videojuego shoot'em up clásico en el que puedes controlar un gato. Cuenta con 5 niveles de dificultad a medida que avanzas. Tu objetivo es esquivar/disparar los obstáculos para ganar puntos y llegar a los 100.",
-    link: "https://raulgarrigos.github.io/the-cat-thief/",
-    github: "https://github.com/raulgarrigos/the-cat-thief",
-    image: "/projects/thecatthief.webp",
-    tags: [tags.HTML, tags.CSS, tags.JavaScript],
-  },
-];
+    link: 'https://raulgarrigos.github.io/the-cat-thief/',
+    github: 'https://github.com/raulgarrigos/the-cat-thief',
+    image: '/projects/thecatthief.webp',
+    tags: [tags.HTML, tags.CSS, tags.JavaScript]
+  }
+]
 ---
 
-<div class="grid grid-cols-1 md:grid-cols-4 lg:grid-cols-4 gap-6">
+<div class='grid grid-cols-1 md:grid-cols-4 lg:grid-cols-4 gap-6'>
   {
     projects.map(({ title, description, tags, image, link, github }, index) => (
       <article
-        class={`bg-[#43229C]/50 rounded shadow-white/10 shadow-xl col-span-2 ${index === 2 && "md:grid lg:grid md:grid-cols-2 lg:grid-cols-2 md:col-span-4 lg:col-span-4"}`}
+        class={`bg-[#43229C]/50 rounded shadow-white/10 shadow-xl col-span-2 ${index === 2 && 'md:grid lg:grid md:grid-cols-2 lg:grid-cols-2 md:col-span-4 lg:col-span-4'}`}
       >
         <div
-          class={`${index === 2 && "md:grid lg:grid md:grid-cols-2 lg:grid-cols-2 md:col-span-2 lg:col-span-4"}`}
+          class={`${index === 2 && 'md:grid lg:grid md:grid-cols-2 lg:grid-cols-2 md:col-span-2 lg:col-span-4'}`}
         >
-          <a href={link} target="_blank" rel="noopener noreferrer">
+          <a href={link} target='_blank' rel='noopener noreferrer'>
             <img
-              class={`rounded shadow-2xl shadow-white/10 mb-2 ${index === 2 && "h-full object-cover"}`}
+              class={`rounded shadow-2xl shadow-white/10 mb-2 ${index === 2 && 'h-full object-cover'}`}
               src={image}
               alt={`Captura de pantalla del proyecto ${title}`}
             />
-            <div class="p-3">
-              <h3 class="text-lg font-semibold text-yellow-200 mb-2">
+            <div class='p-3'>
+              <h3 class='text-lg font-semibold text-yellow-200 mb-2'>
                 {title}
               </h3>
-              <p class="text-m mb-4 text-pretty">{description}</p>
+              <p class='text-m mb-4 text-pretty'>{description}</p>
               <a
-                class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded"
+                class='bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded'
                 href={github}
-                target="_blank"
-                rel="noopener noreferrer"
+                target='_blank'
+                rel='noopener noreferrer'
               >
                 GitHub
               </a>
-              <ul class="flex gap-x-3 flex-row flex-wrap mt-4 -ml-1">
+              <ul class='flex gap-x-3 flex-row flex-wrap mt-4 -ml-1'>
                 {tags.map((tag) => (
                   <li>
                     <span
                       class={`flex gap-x-1 rounded-full text-xs ${tag.class} py-2 px-3 m-1`}
                     >
-                      <tag.icon class="size-4" />
+                      <tag.icon class='size-4' />
                       {tag.name}
                     </span>
                   </li>
