--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -9,7 +9,7 @@ interface Props {
   date: string
   isLatest: boolean
 }
-const { title, description, link, company, date, isLatest } = Astro.props
+const { title, description, link, company, date } = Astro.props
 ---
 
 <span
