Added buttons to projects

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -10,30 +10,19 @@ import CVIcon from '../components/icons/CV.astro'
       class='col-span-1 md:col-span-2 text-white text-pretty order-2 md:order-1'
     >
       <p>
-        ¡Soy Raül! Estudié Periodismo y Fotografía Artística y, tras años
-        ejerciendo como Content y Catalog Specialist en diferentes e-commerces,
-        me pasé al mundo de la Programación Web. <span
-          class='text-yellow-200/90'
-        >
-          Mi camino es una fusión perfecta entre tecnología y creatividad.
-        </span>
+        ¡Hola, me llamo Raül! Estudié Periodismo y Fotografía Artística y, después de ejercer durante años como <span
+        class='text-yellow-200/90'
+      > Content y Catalog Specialist en diferentes e-commerces </span>,
+        decidí pasarme al mundo de la Programación. 
       </p>
       <br />
+    
       <p>
-        Tengo experiencia programando con <span class='text-yellow-200/90'
-          >JavaScript (ES6)
-        </span>, construyendo interfaces dinámicas con <span
-          class='text-yellow-200/90'
-          >React
-        </span> y desarrollando servidores con <span class='text-yellow-200/90'
-          >NodeJS y Express
-        </span>. También he trabajado con bases de datos NoSQL como <span
-          class='text-yellow-200/90'
-          >MongoDB
-        </span>. Pero tengo ganas de seguir ampliando mis conocimientos tanto en
-        lenguajes como en tecnologías.
-      </p>
+        Mi proyecto final de Bootcamp fue votado por los compañeros para <span
+        class='text-yellow-200/90'
+      > representar a la rama de Desarollo Web en el Hackshow  </span> que organiza el propio Bootcamp. Me encanta enfocarme en el Frontend y conseguir una navegación fluida y estética.</p>
       <br />
+    
       <p>
         Actualmente, estoy puliendo mis habilidades de programación dedicándome
         a proyectos personales mientras busco oportunidades como Developer. <span
