--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro'
 
-import Experience from '../components/Experience.astro'
-import SectionContainer from '../components/SectionContainer.astro'
+import AboutMe from '../components/AboutMe.astro'
 import Briefcase from '../components/icons/Briefcase.astro'
 import CodeIcon from '../components/icons/Code.astro'
-import Projects from '../components/Projects.astro'
-import AboutMe from '../components/AboutMe.astro'
+import Experience from '../components/Experience.astro'
 import Hero from '../components/Hero.astro'
+import ProfileIcon from '../components/icons/Profile.astro'
+import Projects from '../components/Projects.astro'
+import SectionContainer from '../components/SectionContainer.astro'
 import Settings from '../components/icons/Settings.astro'
 import Techs from '../components/Stack.astro'
 ---
@@ -46,7 +47,7 @@ import Techs from '../components/Stack.astro'
         <h2
           class='flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white'
         >
-          <Briefcase class='size-7' />
+          <ProfileIcon class='size-7' />
           Sobre mí
         </h2>
         <AboutMe />
