--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,57 +1,60 @@
 ---
-const personalImageAlt = 'Raül Garrigós'
-import Badge from '../components/Badge.astro'
-import LinkedInIcon from '../components/icons/LinkedIn.astro'
-import GitHubIcon from '../components/icons/GitHub.astro'
-import MailIcon from '../components/icons/Mail.astro'
-import SocialPill from '../components/SocialPill.astro'
+const personalImageAlt = "Raül Garrigós";
+import Badge from "../components/Badge.astro";
+import LinkedInIcon from "../components/icons/LinkedIn.astro";
+import GitHubIcon from "../components/icons/GitHub.astro";
+import MailIcon from "../components/icons/Mail.astro";
+import SocialPill from "../components/SocialPill.astro";
 ---
 
-<div class='flex gap-4'>
-  <div class='max-w-xl'>
-    <div class='flex items-center mb-4'>
-      <h1 class='text-2xl font-bold tracking-tight mb-2 text-white sm:text-4xl'>
-        Hola, soy Raül
-      </h1>
-      <a
-        href='https://www.linkedin.com/in/raul-garrigos/'
-        target='_blank'
-        rel='noopener'
-        class='ml-4 flex items-center transition md:justify-center md:hover:scale-105'
-      >
-        <Badge>Disponible para trabajar</Badge>
-      </a>
-    </div>
-    <h2 class='text-xl sm:text-2xl text-yellow-100/80'>FullStack Developer</h2>
-    <p class='mt-4 text-lg sm:text-xl text-gray-400'>
-      +7 años de experiencia como Content y Catalog Specialist. Un día decidí
-      cambiar de rumbo y me embarqué en el Desarrollo Web. <span
-        class='text-yellow-300/90'
-      >
-        Especializado en crear aplicaciones web desde cero.
-      </span> De Barcelona.
-    </p>
-
-    <nav class='flex gap-4 mt-8 flex-wrap'>
-      <SocialPill href='https://www.linkedin.com/in/raul-garrigos/'>
-        <LinkedInIcon class='size-4 md:size-6' />
-        LinkedIn
-      </SocialPill>
-      <SocialPill href='https://github.com/raulgarrigos'>
-        <GitHubIcon class='size-4 md:size-6' />
-        GitHub
-      </SocialPill>
-      <SocialPill href='mailto:raul.garrigos91@gmail.com'>
-        <MailIcon class='size-4 md:size-6' />
-        Contáctame
-      </SocialPill>
-    </nav>
+<div class="w-full flex flex-col">
+  <div class="flex flex-row md:order-1 md:mb-2">
+    <h1 class="text-2xl font-bold tracking-tight mb-2 text-white sm:text-4xl">
+      Hola, soy Raül
+    </h1>
+    <a
+      href="https://www.linkedin.com/in/raul-garrigos/"
+      target="_blank"
+      rel="noopener"
+      class="ml-10 transition md:justify-center md:hover:scale-105"
+    >
+      <Badge>Disponible para trabajar</Badge>
+    </a>
   </div>
-  <div>
+  <div class="md:order-2">
+    <h2 class="text-xl sm:text-2xl text-yellow-100/80">FullStack Developer</h2>
+  </div>
+  <div class="flex flex-row-reverse md:order-3 md:flex md:flex-row-reverse">
     <img
-      class='rounded-full shadow-lg size-21'
-      src='/raulgarrigos.webp'
+      class="rounded-full shadow-lg size-24 lg:size-52 md:size-40 mt-3 md:m-5 md:-mt-12"
+      src="/raulgarrigos.webp"
       alt={personalImageAlt}
     />
+    <div>
+      <p
+        class="mt-4 ml-2 md:ml-0 text-base pr-4 md:text-lg lg:text-xl text-gray-400"
+      >
+        +7 años de experiencia como Content y Catalog Specialist. Un día decidí
+        cambiar de rumbo y me embarqué en el Desarrollo Web. <span
+          class="text-yellow-300/90"
+        >
+          Especializado en crear aplicaciones web desde cero.
+        </span> De Barcelona.
+      </p>
+      <nav class="flex mt-4 md:mt-6 gap-x-2 md:gap-x-4">
+        <SocialPill href="https://www.linkedin.com/in/raul-garrigos/">
+          <LinkedInIcon class="size-4 md:size-6 fill-black" />
+          LinkedIn
+        </SocialPill>
+        <SocialPill href="https://github.com/raulgarrigos">
+          <GitHubIcon class="size-4 md:size-6" />
+          GitHub
+        </SocialPill>
+        <SocialPill href="mailto:raul.garrigos91@gmail.com">
+          <MailIcon class="size-4 md:size-6" />
+          Contáctame
+        </SocialPill>
+      </nav>
+    </div>
   </div>
 </div>
